<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_create_coach"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/create_coach"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_change_api_key"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/change_api_key"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rename_conversation"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/rename_conversation"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite_conversation"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/favorite_conversation"
        android:checkable="true"
        app:showAsAction="ifRoom" />
</menu>
