<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.jugcoach.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.jugcoach.ui.gallery.GalleryFragment"
        android:label="Patterns"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_nav_gallery_to_patternDetailsFragment"
            app:destination="@id/patternDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/patternDetailsFragment"
        android:name="com.example.jugcoach.ui.details.PatternDetailsFragment"
        android:label="Pattern Details"
        tools:layout="@layout/fragment_pattern_details">
        <argument
            android:name="patternId"
            app:argType="string" />
        <action
            android:id="@+id/action_patternDetailsFragment_self"
            app:destination="@id/patternDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.jugcoach.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat">
        <action
            android:id="@+id/action_nav_chat_to_createCoachFragment"
            app:destination="@id/createCoachFragment" />
    </fragment>

    <fragment
        android:id="@+id/createCoachFragment"
        android:name="com.example.jugcoach.ui.coach.CreateCoachFragment"
        android:label="@string/create_coach"
        tools:layout="@layout/fragment_create_coach" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.jugcoach.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
